# proctor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
bench/: Cargo.toml
bench/corpus/: README.md  generate.sh
bench/results/: BENCHMARKS.md  DOD.md  METHODOLOGY.md  README.md
bench/results/adversary/: escalation_cheap_downscale.csv
bench/results/crypto/: crypto_latency_raw.csv  crypto_pct_transcode.csv  memfd_vs_disk.csv
bench/results/laptop-i5-1135g7/: BENCHMARKS.md  METHODOLOGY.md  PROFILING.md
bench/results/laptop-i5-1135g7/adversary/: ADVERSARY.md  METHODOLOGY.md  detection_vs_predicted.csv  per_class_far.csv  slow_zombie_chaos.csv
bench/results/laptop-i5-1135g7/crypto/: METHODOLOGY.md  aead_throughput.csv  crypto_latency_summary.csv  no-disk-audit.txt  regen-no-disk-audit.sh
bench/results/laptop-i5-1135g7/pipeline/: METHODOLOGY.md  SUMMARY.md  verification_cost.csv
bench/results/laptop-i5-1135g7/saturation/: METHODOLOGY.md  SUMMARY.md  reclaim_latency.csv
bench/results/laptop-i5-1135g7/sched/: SUMMARY.md  decision_time.csv  perf-placement.txt  rtt.csv
bench/results/pipeline/: crypto_pct.csv  verifier_capacity.csv
bench/results/saturation/: overload_timeseries.csv
bench/results/sched/: METHODOLOGY.md  dispatch_latency.csv  throughput_vs_n.csv
bench/results/verify/: DETECTION.md  STUDY.md  detection-divergence.csv  detection-family.csv  heldout-far-frr.csv  per-stratum-frr.csv  roc-curve-calibration.csv  roc-scores.csv  roc-threshold.json  verification-cost.csv
bench/src/: adversary.rs  decomp.rs  inject.rs  lib.rs  main.rs  metrics.rs  orchestrate.rs  pipeline.rs  preprocess.rs  report.rs  saturation.rs  topology.rs
bench/tests/: live_smoke.rs
core/: Cargo.toml
core/src/: commit.rs  id.rs  lease.rs  lib.rs  proto.rs  state.rs  task.rs
core/tests/: state_invariants.rs
crypto/: Cargo.toml
crypto/examples/: crypto_overhead.rs  no_disk_cycle.rs
crypto/src/: aead.rs  blob.rs  key.rs  keysource.rs  lib.rs  memfd.rs  sys.rs  transcode.rs
crypto/tests/: no_disk.rs
docs/: ARCHITECTURE.md  THREAT-MODEL.md
docs/specs/: kickoff-amendment-1.md  kickoff-brief.md  phase0-spec.md  phase1-spec.md  phase2-spec.md  phase3-spec.md  phase4-spec.md  phase5-spec.md  phase6-spec.md  phase7-spec.md
sched/: Cargo.toml
sched/src/: backpressure.rs  engine.rs  lib.rs  loops.rs  main.rs  place.rs  reputation.rs  sample.rs  sim.rs
sched/src/store/: contract.rs  memory.rs  mod.rs  redis.rs
verifier/: Cargo.toml
verifier/src/: main.rs
verify/: Cargo.toml
verify/examples/: detection_curves.rs  verify_eval.rs
verify/src/: binding.rs  compare.rs  detection.rs  frame.rs  integrity.rs  lib.rs  roc.rs  ssim.rs
worker/: Cargo.toml
worker/src/: concurrency.rs  main.rs  stitch_task.rs  transcode_task.rs  transport.rs
