[workspace]
resolver = "2"
members = ["core", "crypto", "verify", "sched", "verifier", "worker", "bench"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# Phase-0 dependency allowlist (see CLAUDE.md): thiserror only.
# Heavy deps (aes-gcm, redis, an SSIM crate, ...) arrive with their phases.
[workspace.dependencies]
thiserror = "2"
