[workspace]
resolver = "2"
members = ["core", "crypto", "verify", "sched", "verifier", "worker", "bench"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# Dependency allowlist (see CLAUDE.md). Phase 1 adds the `core` wire/commit deps;
# heavier deps (aes-gcm, redis, an SSIM crate, ...) still arrive with their phases.
[workspace.dependencies]
thiserror = "2"
# Phase 1 (core): the protocol types are the wire contract, so their serialized
# shape is frozen. Added per-session as the modules that use them land.
serde = { version = "1", features = ["derive"] }
sha2 = "0.10" # SHA-256 for the Merkle commit-reveal (core/commit.rs).
# Canonical, deterministic codec for the frozen wire messages (core/proto.rs).
postcard = { version = "1", features = ["alloc"] }
proptest = "1" # dev-only: property tests for the core invariants (I1–I5).
# Phase 2 (crypto): in-memory AES-256-GCM with mlock'd, zeroizing key material.
aes-gcm = "0.10"                                  # AES-256-GCM AEAD; runtime AES-NI detection.
zeroize = { version = "1", features = ["derive"] } # volatile, un-elidable zeroization.
getrandom = "0.2"                                 # OS CSPRNG for key + nonce bytes (no `rand`).
libc = "0.2"                                      # mlock/munlock (+ memfd later); only in sys.rs.
# Phase 3 (verify): read the committed ROC threshold file; emit study artifacts.
serde_json = "1"
# Phase 3 (verify): Beta quantiles for Clopper–Pearson FAR/FRR intervals (roc.rs).
statrs = "0.18"
