[package]
name = "bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Phase 6 (phase6-spec.md §2): the single-host harness binary. The library code under
# measurement (proctor_core, crypto, verify, sched) plus the orchestration/metrics deps.
# Allowlist: proctor_core, crypto, verify, sched, redis, rand, hdrhistogram, thiserror.
# No tokio/async, no unsafe/FFI (taskset + perf are external commands), no plotting runtime
# dep (results are committed CSVs).
[dependencies]
proctor_core = { package = "core", path = "../core" }
crypto = { path = "../crypto" }
verify = { path = "../verify" }
sched = { path = "../sched" }
redis = { version = "0.27", default-features = false, features = ["script"] }
rand = "0.8"
hdrhistogram = "7"
thiserror.workspace = true

[dev-dependencies]
# Phase 5 Session 5 (phase5-spec.md §7): the live single-host smoke run reuses the regular
# deps above plus sha2 to recompute content addresses (a pre-existing Phase 5 dev-dep, not a
# Phase 6 allowlist addition).
sha2.workspace = true
