[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
# Phase 2 (phase2-spec.md §2). The frozen `core` ids form the AEAD AAD.
proctor_core = { package = "core", path = "../core" }
aes-gcm.workspace = true
zeroize.workspace = true
getrandom.workspace = true
libc.workspace = true
