[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
# Phase 2 (phase2-spec.md §2). The frozen `core` ids form the AEAD AAD.
proctor_core = { package = "core", path = "../core" }
aes-gcm.workspace = true
zeroize.workspace = true
getrandom.workspace = true
libc.workspace = true
# Phase 5 (phase5-spec.md §3): content-address the blob store by lead128(SHA-256(ciphertext)).
# Same workspace-pinned hash `core` already uses — no supply-chain expansion. `core` is frozen and
# exposes only the folded Merkle root (not the raw leaf), so the blob seam needs SHA-256 directly.
sha2.workspace = true
