[package]
name = "sched"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
proctor_core = { package = "core", path = "../core" }
# Phase 4 allowlist (phase4-spec.md §2): proctor_core, redis, rand, thiserror.
# Added per-session as the modules that use them land. `rand` arrives with
# sample.rs (Session 4).
thiserror.workspace = true
# Session 2 (phase4-spec.md §3.2): the synchronous Redis client + redis::Script
# for the Lua-atomic epoch-fenced transitions. default-features = false keeps the
# async runtimes out — locked decision #1 forbids an async runtime in sched; the
# "script" feature is the (sync) EVALSHA/Script support we rely on.
redis = { version = "0.27", default-features = false, features = ["script"] }
# Session 4 (phase4-spec.md §5.3): Bernoulli(p_tier) verify-sampling with an
# injectable RNG — OsRng/entropy in prod, seeded StdRng in tests. 0.8 matches the
# rand already in the tree (proptest); no async.
rand = "0.8"
